--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=human-service
 spring.cloud.config.enabled=false
 server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/human_service
+spring.datasource.username=root
+spring.datasource.password=keep1234
