--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/human_service
 spring.datasource.username=root
 spring.datasource.password=keep1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.flyway.enabled=true
+spring.flyway.baselineOnMigrate=true
+spring.flyway.validateOnMigrate=true
+spring.flyway.locations=classpath:db/migration
