--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.1</version>
+        </dependency>
+
         <!-- Unit test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
